--- a/lunandroid/build.gradle
+++ b/lunandroid/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
+
     defaultConfig {
-        applicationId "ninja.hikaru.kimoppi"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -16,12 +16,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    productFlavors {
-    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
-    compile project(':lunandroid')
+    compile 'com.android.support:appcompat-v7:22.1.1'
 }
