--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ android:
   components:
     - build-tools-21.1.1
     - android-21
+    - extra-google-m2repository
+    - extra-android-m2repository
     - sys-img-armeabi-v7a-android-21
 before_script:
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
