--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ before_script:
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
+script:
+  - ./gradlew build connectedCheck uploadDeployGate
