--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,23 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.1.0'
+        classpath 'com.deploygate:gradle:0.6.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+}
+
+apply plugin: 'deploygate'
+
+deploygate {
+    userName = "hikaruna"
+    token = "2bddde1c0babdf9583f4127a1e04f3ba66405552"
+
+    apks {
+        debug {
+            sourceFile = file("./app/build/outputs/apk/app-debug.apk")
+        }
     }
 }
 
